objects/WGS_Sold_Contract_Codes__c.object
<CustomObject>
    <description>Stores WGS Input Data with contract codes to automate QLI creation.</description>
    <fields>
        <fullName>Benefit_Period__c</fullName>
        <label>Benefit Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Benefit Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financing</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_count__c</fullName>
        <label>Member count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLI_ID_Created__c</fullName>
        <description>Stores the ID of new QLI created as a part of the automated batch process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QLI ID Created</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Pending, Success , Error</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_count__c</fullName>
        <label>Subscriber count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Flag__c</fullName>
        <label>Upsell Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WGS_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS Group Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>WGS Sold Contract Codes</label>
    <nameField>
        <displayFormat>WGSCC-{0000000}</displayFormat>
        <label>WGS Sold Contract Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WGS Sold Contract Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>